# Rocket

contrib/db_pools/lib/: Cargo.toml
contrib/db_pools/lib/src/: database.rs  pool.rs
contrib/dyn_templates/src/: context.rs  fairing.rs  handlebars_templates.rs  lib.rs  metadata.rs  tera_templates.rs
contrib/sync_db_pools/lib/: Cargo.toml
contrib/sync_db_pools/lib/src/: connection.rs  lib.rs
core/codegen/src/: exports.rs
core/http/: Cargo.toml
core/http/src/: listener.rs
core/lib/: Cargo.toml  build.rs
core/lib/src/: cookies.rs  error.rs  ext.rs  lib.rs  log.rs  mtls.rs  outcome.rs  phase.rs  rocket.rs  server.rs  state.rs  trace.rs  tracingcontext.rs
core/lib/src/config/: config.rs  mod.rs  shutdown.rs  tls.rs
core/lib/src/data/: data.rs  from_data.rs  limits.rs
core/lib/src/fairing/: ad_hoc.rs  fairings.rs  info_kind.rs  mod.rs
core/lib/src/form/: error.rs  form.rs  from_form.rs  lenient.rs  mod.rs  parser.rs  validate.rs
core/lib/src/fs/: server.rs  temp_file.rs
core/lib/src/request/: from_param.rs  from_request.rs  mod.rs  request.rs
core/lib/src/response/: body.rs  debug.rs  flash.rs  redirect.rs  responder.rs  response.rs
core/lib/src/route/: uri.rs
core/lib/src/router/: collider.rs
core/lib/tests/: form-validation-names.rs  timer-on-attach.rs  uri-percent-encoding-issue-808.rs
examples/: Cargo.toml
examples/databases/src/: sqlx.rs
examples/fairings/src/: main.rs
examples/forms/: Cargo.toml
examples/manual-routing/src/: main.rs
examples/state/src/: request_local.rs
examples/todo/src/: main.rs
scripts/: test.sh
(+16 files in other folders)
