[workspace]
members = [
  "config",
  "cookies",
  "databases",
  "error-handling",
  "fairings",
  "forms",
  "hello",
  "manual-routing",
  "responders",
  "serialization",
  "state",
  "static-files",
  "templating",
  "testing",
  "tls",

  "pastebin",
  "todo",
  "trace_env_logger",
  "trace_subscriber",
  "chat",
]
